# internal/apiserver/interfaces/api/policy.go
@@ -105,7 +105,7 @@ func (p *policy) updatePolicy(c *gin.Context) {
 //	@Tags			Policies
 //	@Summary		DeletePolicy
 //	@Description	DeleteByInstanceId policy by instanceId
-//	@Param			name	path		string			true	"name of a policy"
+//	@Param			instanceId	path		string			true	"name of a policy"
 //	@Success		200		{object}	api.Response	"Policy successfully deleted"
 //	@Router			/api/v1/policies/{instanceId} [DELETE]
 //	@Security		BearerTokenAuth
@@ -128,7 +128,7 @@ func (p *policy) deletePolicy(c *gin.Context) {
 //	@Tags			Policies
 //	@Summary		GetPolicyInfo
 //	@Description	GetByName a policy by name
-//	@Param			name	path		string										true	"name of a policy"
+//	@Param			instanceId	path		string										true	"name of a policy"
 //	@Success		200		{object}	api.Response{data=v1.DetailPolicyResponse}	"Policy detail"
 //	@Router			/api/v1/policies/{instanceId} [get]
 //	@Security		BearerTokenAuth
