# internal/apiserver/interfaces/api/role.go
@@ -108,7 +108,7 @@ func (r *role) updateRole(c *gin.Context) {
 //	@Tags			Roles
 //	@Summary		DeleteRole
 //	@Description	DeleteByInstanceId role
-//	@Param			name	path		string			true	"identifier of a role"
+//	@Param			instanceId	path		string			true	"identifier of a role"
 //	@Success		200		{object}	api.Response	"delete role"
 //	@Router			/api/v1/roles/{instanceId} [delete]
 //	@Security		BearerTokenAuth
@@ -127,7 +127,7 @@ func (r *role) deleteRole(c *gin.Context) {
 //	@Tags			Roles
 //	@Summary		GetRoleInfo
 //	@Description	GetByName role info
-//	@Param			name	path		string										true	"identifier of a role"
+//	@Param			instanceId	path		string										true	"identifier of a role"
 //	@Success		200		{object}	api.Response{data=v1.DetailRoleResponse}	"role detail"
 //	@Router			/api/v1/roles/{instanceId} [get]
 //	@Security		BearerTokenAuth
